chore: refactored itests to use the OkHttpClient everywhere instead of the unmaintained khttp client